--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "scripts": {
     "build": "react-scripts build",
     "start": "node backend/server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install  && npm run build"
   },
   "engines": {
     "node": "12.16.1"
-},
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -36,8 +36,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-    ,"proxy": "http://localhost:5000"
+    ],
+    "proxy": "http://localhost:5000"
   }
-  
 }
