--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
   "scripts": {
     "build": "react-scripts build",
     "start": "node backend/server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install  && npm run build",
-    "heroku config":"set NODE_MODULES_CACHE=false"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install  && npm run build"
   },
   "engines": {
-    "node": "12.16.1"
+    "node": "10.16.0"
   },
   "eslintConfig": {
     "extends": "react-app"
